퍼블리싱 완료

--- a/jungmo/extend.html
+++ b/jungmo/extend.html
@@ -110,7 +110,7 @@
                                 <a href="#" class="hp_nomalCusor">모임</a>
                                 <ul>
                                     <li class="bl_sideNavBar_subList"><a href="#">모임정보</a></li>
-                                    <li class="bl_sideNavBar_subList"><a href="#">인원확장요청</a></li>
+                                    <li class="bl_sideNavBar_subList"><a class="on" href="#">인원확장요청</a></li>
                                 </ul>
                             </li>
                             <li class="bl_sideNavBar_list">
@@ -180,11 +180,11 @@
                     <section class="bl_mainTable">
                         <table class="bl_mainTable">
                             <tr class="bl_mainTable_row">
-                                <th class="bl_mainTable_cat bl_mainTable_cat__w170">요청일시</th>
-                                <th class="bl_mainTable_cat bl_mainTable_cat__w107">닉네임</th>
-                                <th class="bl_mainTable_cat bl_mainTable_cat__w246">모임명</th>
-                                <th class="bl_mainTable_cat bl_mainTable_cat__w57">인원</th>
-                                <th class="bl_mainTable_cat bl_mainTable_cat__w174">승인 및 거절</th>
+                                <th class="bl_mainTable_cat hp_w170">요청일시</th>
+                                <th class="bl_mainTable_cat hp_w107">닉네임</th>
+                                <th class="bl_mainTable_cat hp_w246">모임명</th>
+                                <th class="bl_mainTable_cat hp_w57">인원</th>
+                                <th class="bl_mainTable_cat hp_w174">승인 및 거절</th>
                             </tr>
                             <tr class="bl_mainTable_row">
                                 <td class="bl_mainTable_col">2022-03-21 11:37:58</td>
