철자 오류 수정

--- a/main.html
+++ b/main.html
@@ -154,35 +154,35 @@
                             <!-- 0 이었다가 0.4 초마다 1의 자리부터 숫자 바귐 -->
                             <div class="un_oeGoalNum_now">
                                 <section class="un_oeGoalNum_unit">
-                                    <div class="un_oeGoalNum_item am_GolaNum" style="--i:7">
+                                    <div class="un_oeGoalNum_item am_GoalNum" style="--i:7">
                                         <p>0</p>
                                         <div class="backface"></div>
                                     </div>
                                 </section>
                                 <section class="un_oeGoalNum_unit">
-                                    <div class="un_oeGoalNum_item am_GolaNum" style="--i:6">
+                                    <div class="un_oeGoalNum_item am_GoalNum" style="--i:6">
                                         <p>0</p>
                                         <div class="backface"></div>
                                     </div>
-                                    <div class="un_oeGoalNum_item am_GolaNum" style="--i:5">
+                                    <div class="un_oeGoalNum_item am_GoalNum" style="--i:5">
                                         <p>0</p>
                                         <div class="backface"></div>
                                     </div>
-                                    <div class="un_oeGoalNum_item am_GolaNum" style="--i:4">
+                                    <div class="un_oeGoalNum_item am_GoalNum" style="--i:4">
                                         <p>0</p>
                                         <div class="backface"></div>
                                     </div>
                                 </section>
                                 <section class="un_oeGoalNum_unit">
-                                    <div class="un_oeGoalNum_item am_GolaNum" style="--i:3">
+                                    <div class="un_oeGoalNum_item am_GoalNum" style="--i:3">
                                         <p>0</p>
                                         <div class="backface"></div>
                                     </div>
-                                    <div class="un_oeGoalNum_item am_GolaNum" style="--i:2">
+                                    <div class="un_oeGoalNum_item am_GoalNum" style="--i:2">
                                         <p>0</p>
                                         <div class="backface"></div>
                                     </div>
-                                    <div class="un_oeGoalNum_item am_GolaNum" style="--i:1">
+                                    <div class="un_oeGoalNum_item am_GoalNum" style="--i:1">
                                         <p>0</p>
                                         <div class="backface"></div>
                                     </div>
