hidden 클래스 추가

--- a/report/index.html
+++ b/report/index.html
@@ -193,7 +193,7 @@
                         </table>
                         <div class="ly_tableFooter">
                             <div class="bl_pageControl">
-                                <a href="#" class="ic_roundArrow__left2 blind"></a>
+                                <a href="#" class="ic_roundArrow__left2 hidden"></a>
                                 <a href="#" class="ic_roundArrow__left"></a>
                                 <p>1 / 3</p>
                                 <a href="#" class="ic_roundArrow__left rev"></a>
