--- a/main.html
+++ b/main.html
@@ -83,10 +83,18 @@
 
         <header class="hp_bgGreen">
             <div class="ly_header bl_header">
-                <figure class="bl_header_imgWrapper">
-                    <img src="/images/logo_oeText.svg" alt="오이로고 이미지">
-                </figure>
-                <p class="bl_header_txt">관리</p>
+                <div class="bl_header_left">
+                    <figure class="bl_header_imgWrapper">
+                        <img src="/images/logo_oeText.svg" alt="오이로고 이미지">
+                    </figure>
+                    <p class="bl_header_txt">관리</p>
+                </div>
+                <div class="bl_header_right">
+                    <p>dbsgh435</p>
+                    <ul>
+                       <li>로그아웃</li> 
+                    </ul>
+                </div>
             </div>
         </header>
 
