회원가입 버튼 및 인풋 비활성화 상태 수정

--- a/signUp.html
+++ b/signUp.html
@@ -25,9 +25,9 @@
                     <section class="un_signUp_info">
                         <!-- 버튼 클릭시 .soft 추가 -->
                         <button class="soft">인증번호 발송</button>
-                        <p class="hp_cGreen ">인증이 완료되었습니다.</p>
+                        <p class="hp_cGreen">인증이 완료되었습니다.</p>
                         <!-- .hp_bbRed 추가시 빨간 줄 / .hp_bbGreen -->
-                        <input type="password" class="hp_bbGreen" placeholder="담당자에게 인증번호를 발송합니다">
+                        <input type="password" class="hp_bbGreen" disabled placeholder="담당자에게 인증번호를 발송합니다">
                     </section>
                 </div>
                 <div class="un_signUp_textWrapper">
@@ -44,7 +44,7 @@
                 </div>
                 <div class="un_signUp_btnWrapper">
                     <!-- .el_bgBtn48_soft 제거시 버튼 활성화 -->
-                    <button class="el_bgBtn48 el_bgBtn48_soft">완료</button>
+                    <button class="el_bgBtn48" disabled>완료</button>
                 </div>
             </div>
             <!-- /un_signUp_cnt -->
