--- a/main.html
+++ b/main.html
@@ -90,7 +90,8 @@
                     <p class="bl_header_txt">관리</p>
                 </div>
                 <div class="bl_header_right">
-                    <p>dbsgh435</p>
+                    <!-- p 클릭시 .am_click 추가 -->
+                    <p class="am_click">dbsgh435</p>
                     <ul>
                        <li>로그아웃</li> 
                     </ul>
