커뮤니티 표 사이즈 조절

--- a/comunity/index.html
+++ b/comunity/index.html
@@ -32,7 +32,7 @@
         </article>
 
         <!-- 팝업 3개 = 모임 선택시 / 삭제된 모임에서 '상세' 선틱시 / 삭제팝업에서 확인 선택 시 -->
-        <article class="bl_pop_wrapper">
+        <article class="bl_pop_wrapper blind">
 
             <!-- 모임 선택시 -->
             <div class="bl_pop blind">
@@ -184,46 +184,46 @@
                                 <th class="bl_mainTable_cat hp_w170">작성일시</th>
                                 <th class="bl_mainTable_cat hp_w63">카테고리</th>
                                 <th class="bl_mainTable_cat hp_w130">닉네임</th>
-                                <th class="bl_mainTable_cat hp_w246">내용</th>
-                                <th class="bl_mainTable_cat hp_taRight hp_w47">조회수</th>
-                                <th class="bl_mainTable_cat hp_taRight hp_w47">댓글</th>
-                                <th class="bl_mainTable_cat hp_taRight hp_w47">공감</th>
+                                <th class="bl_mainTable_cat hp_w220">내용</th>
+                                <th class="bl_mainTable_cat hp_w60 arrow">조회수</th>
+                                <th class="bl_mainTable_cat hp_w60 arrow">댓글</th>
+                                <th class="bl_mainTable_cat hp_w60 arrow">공감</th>
                             </tr>
                             <tr class="bl_mainTable_row hover">
                                 <td class="bl_mainTable_col">2022-03-21 11:37:58</td>
                                 <td class="bl_mainTable_col">고민</td>
                                 <td class="bl_mainTable_col">독도는우리땅</td>
                                 <td class="bl_mainTable_col">50대에 새롭게 시작할만한 취미가 무엇이 있을까여 알아맞춰 보쇼</td>
-                                <td class="bl_mainTable_col hp_taRight">24</td>
-                                <td class="bl_mainTable_col hp_taRight">6</td>
-                                <td class="bl_mainTable_col hp_taRight">12</td>
+                                <td class="bl_mainTable_col">24</td>
+                                <td class="bl_mainTable_col">6</td>
+                                <td class="bl_mainTable_col">12</td>
                             </tr>
                             <tr class="bl_mainTable_row hover">
                                 <td class="bl_mainTable_col">2022-03-21 11:37:58</td>
                                 <td class="bl_mainTable_col">고민</td>
                                 <td class="bl_mainTable_col">독도는우리땅</td>
                                 <td class="bl_mainTable_col">50대에 새롭게 시작할만한 취미가 무엇이 있을까여 알아맞춰 보쇼</td>
-                                <td class="bl_mainTable_col hp_taRight">24</td>
-                                <td class="bl_mainTable_col hp_taRight">6</td>
-                                <td class="bl_mainTable_col hp_taRight">12</td>
+                                <td class="bl_mainTable_col">24</td>
+                                <td class="bl_mainTable_col">6</td>
+                                <td class="bl_mainTable_col">12</td>
                             </tr>
                             <tr class="bl_mainTable_row hover">
                                 <td class="bl_mainTable_col">2022-03-21 11:37:58</td>
                                 <td class="bl_mainTable_col">고민</td>
                                 <td class="bl_mainTable_col">독도는우리땅</td>
                                 <td class="bl_mainTable_col">50대에 새롭게 시작할만한 취미가 무엇이 있을까여 알아맞춰 보쇼</td>
-                                <td class="bl_mainTable_col hp_taRight">24</td>
-                                <td class="bl_mainTable_col hp_taRight">6</td>
-                                <td class="bl_mainTable_col hp_taRight">12</td>
+                                <td class="bl_mainTable_col">24</td>
+                                <td class="bl_mainTable_col">6</td>
+                                <td class="bl_mainTable_col">12</td>
                             </tr>
                             <tr class="bl_mainTable_row delet">
                                 <td class="bl_mainTable_col">2022-03-21 11:37:58</td>
                                 <td class="bl_mainTable_col">고민</td>
                                 <td class="bl_mainTable_col">독도는우리땅</td>
                                 <td class="bl_mainTable_col">50대에 새롭게 시작할만한 취미가 무엇이 있을까여 알아맞춰 보쇼</td>
-                                <td class="bl_mainTable_col hp_taRight">24</td>
-                                <td class="bl_mainTable_col hp_taRight">6</td>
-                                <td class="bl_mainTable_col hp_taRight">12</td>
+                                <td class="bl_mainTable_col">24</td>
+                                <td class="bl_mainTable_col">6</td>
+                                <td class="bl_mainTable_col">12</td>
                             </tr>
                         </table>
                         <div class="ly_tableFooter">
