--- a/member/joinCount.html
+++ b/member/joinCount.html
@@ -214,7 +214,7 @@
                                 <th class="bl_mainTable_cat arrow hp_w100">출생</th>
                                 <th class="bl_mainTable_cat hp_w100">닉네임</th>
                                 <th class="bl_mainTable_cat hp_w130">연락처</th>
-                                <th class="bl_mainTable_cat hp_w72">받은오이</th>
+                                <th class="bl_mainTable_cat hp_w72 arrow arrow_rev">받은오이</th>
                                 <th class="bl_mainTable_cat hp_w72">받은신고</th>
                             </tr>
                             <tr class="bl_mainTable_row hover">
