--- a/main.html
+++ b/main.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="bl_header_right">
                     <!-- p 클릭시 .am_click 추가 -->
-                    <p class="am_click">dbsgh435</p>
+                    <p class="">dbsgh435</p>
                     <ul>
                        <li>로그아웃</li> 
                     </ul>
