조회 필터링 날짜 인풋값 수정

--- a/member/joinCount.html
+++ b/member/joinCount.html
@@ -179,7 +179,7 @@
                         </ul>
                     </section>
                     <!-- 날짜 필터링 -->
-                    <section class="ly_dateCat blind">
+                    <section class="ly_dateCat">
                         <ul class="bl_subCat">
                             <!-- .on추가시 활성화 -->
                             <li class="bl_subCat_list">1주일</li>
@@ -190,11 +190,11 @@
                         </ul>
                         <div class="bl_dateSearch">
                             <section class="bl_dateSearch_inpWrapper">
-                                <input type="number" disabled placeholder="2022.03.22">
+                                <input type="date">
                             </section>
                             <div class="bl_dateSearch_hyphen"></div>
                             <section class="bl_dateSearch_inpWrapper">
-                                <input type="number" disabled placeholder="2022.03.22">
+                                <input type="date">
                             </section>
                             <button class="bl_dateSearch_btn">조회</button>
                         </div>
