통계 업데이트 및 패스워드 변경 추가

--- a/stats/index.html
+++ b/stats/index.html
@@ -92,8 +92,88 @@
                         </ul>
                     </section>
 
-                    <section>
-                        <!-- 기존 통계 ui 복붙 -->
+                    <!-- 그래프용 -->
+                    <section class="blind">
+                        <div class="un_mainCalendarWrapper">
+                            <div class="un_calendar_header">
+                                <a class="ic_arrow__left"></a>
+                                <p>2021.11</p>
+                                <a class="ic_arrow__right"></a>
+                            </div>
+                        </div>
+                        <div style="background:tomato; height: 500px; ">
+                            <!-- 기존 통계 ui 복붙 -->
+                        </div>
+                    </section>
+
+                    <!-- 주간 가입자 -->
+                    <section class="bl_mainTable_wrapper psInfo_cat">
+                        <table class="bl_mainTable">
+                            <tr class="bl_mainTable_row hover">
+                                <!-- .arrow 추가시 화살표 생성 / 추가로 .arrow_rev 추가시 화살표 반전 -->
+                                <th class="bl_mainTable_cat hp_w151">기간</th>
+                                <th class="bl_mainTable_cat hp_w107">가입 수</th>
+                                <th class="bl_mainTable_cat hp_w100">1주차</th>
+                                <th class="bl_mainTable_cat hp_w100">2주차</th>
+                                <th class="bl_mainTable_cat hp_w100">3주차</th>
+                                <th class="bl_mainTable_cat hp_w100">4주차</th>
+                                <th class="bl_mainTable_cat hp_w100">5주차</th>
+                            </tr>
+                            <tr class="bl_mainTable_row hover">
+                                <td class="bl_mainTable_col">12월 01일 - 12월 21일</td>
+                                <td class="bl_mainTable_col">132</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                            </tr>
+                            <tr class="bl_mainTable_row hover">
+                                <td class="bl_mainTable_col">12월 01일 - 12월 21일</td>
+                                <td class="bl_mainTable_col">132</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                            </tr>
+                            <tr class="bl_mainTable_row hover">
+                                <td class="bl_mainTable_col">12월 01일 - 12월 21일</td>
+                                <td class="bl_mainTable_col">132</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                            </tr>
+                            <tr class="bl_mainTable_row hover">
+                                <td class="bl_mainTable_col">12월 01일 - 12월 21일</td>
+                                <td class="bl_mainTable_col">132</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                            </tr>
+                            <tr class="bl_mainTable_row hover">
+                                <td class="bl_mainTable_col">12월 01일 - 12월 21일</td>
+                                <td class="bl_mainTable_col">132</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                            </tr>
+                            <tr class="bl_mainTable_row hover">
+                                <td class="bl_mainTable_col">12월 01일 - 12월 21일</td>
+                                <td class="bl_mainTable_col">132</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                                <td class="bl_mainTable_col">0.00%</td>
+                            </tr>
+                        </table>
                     </section>
 
                 </article>
