--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
                 </div>
                 <div class="bl_header_right">
                     <!-- p 클릭시 .am_click 추가 -->
-                    <p class="">dbsgh435</p>
+                    <p class="am_click">dbsgh435</p>
                     <ul>
+                       <li>비밀번호 변경</li> 
                        <li>로그아웃</li> 
                     </ul>
                 </div>
