비밀번호 변경 페이지 수정

--- a/auto/edit/password.html
+++ b/auto/edit/password.html
@@ -14,15 +14,19 @@
             <h2 class="un_signUp_ttl">비밀번호 변경</h2>
             <div class="un_signUp_cnt">
                 <div class="un_signUp_inpWrapper">
-                    <form class="un_signUp_info">
-                        <p class="hp_cRed">비밀번호가 일치하지 않습니다.</p>
-                        <input class="hp_mb60" type="password" placeholder="현재 비밀번호">
-                        <!-- .hp_bbRed 추가시 빨간 줄 -->
+                    <section class="un_signUp_info">
                         <form>
+                            <!-- .hp_bbRed 추가시 빨간 줄 -->
+                            <input class="hp_mb60 hp_bbRed" type="password" placeholder="현재 비밀번호">
+                            <p class="hp_cRed hp_b34">현재 비밀번호가 일치하지 않습니다.</p>
+                        </form>
+                        <form>
+                            <p class="hp_cRed">새 비밀번호가 일치하지 않습니다.</p>
+                            <!-- .hp_bbRed 추가시 빨간 줄 -->
                             <input type="password" class="hp_bbRed" placeholder="새 비밀번호">
                             <input type="password" class="hp_bbRed" placeholder="새 비밀번호 확인">
                         </form>
-                    </form>
+                    </section>
                 </div>
                 <div class="un_signUp_btnWrapper">
                     <!-- .el_bgBtn48_soft 제거시 버튼 활성화 -->
