탑바, 사이드네비 요루 수정 / 신고 페이지 분류 추가

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <!-- --------------------------------------------------팝업 끝 ----------------------------------------------->
 
         <header class="hp_bgGreen">
-            <div class="ly_header bl_header">
+            <div class="ly_header bl_header hp_bgGreen hp_bgGreen">
                 <div class="bl_header_left">
                     <figure class="bl_header_imgWrapper">
                         <img src="/images/logo_oeText.svg" alt="오이로고 이미지">
@@ -150,7 +150,7 @@
                     </nav>
                 </aside>
 
-                <article class="ly_contents">
+                <article class="ly_contents hp_mt60">
                     <section class="el_mainTtl_wrapper">
                         <h1 class="el_mainTtl">오이 목표</h1>
                     </section>
