--- a/jungmo/index.html
+++ b/jungmo/index.html
@@ -174,7 +174,7 @@
 <!-- ------------------------------------------팝업 끝----------------------------------------------->
 
         <header class="hp_bgGreen">
-            <div class="ly_header bl_header">
+            <div class="ly_header bl_header hp_bgGreen">
                 <figure class="bl_header_imgWrapper">
                     <img src="/images/logo_oeText.svg" alt="오이로고 이미지">
                 </figure>
@@ -232,7 +232,7 @@
                     </nav>
                 </aside>
 
-                <article class="ly_contents">
+                <article class="ly_contents hp_mt60">
                     <!-- 타이틀 -->
                     <section class="el_mainTtl_wrapper">
                         <h1 class="el_mainTtl">모임 정보</h1>
