--- a/report/index.html
+++ b/report/index.html
@@ -66,7 +66,7 @@
 <!-- ------------------------------------------팝업 끝----------------------------------------------->
 
         <header class="hp_bgGreen">
-            <div class="ly_header bl_header">
+            <div class="ly_header bl_header hp_bgGreen ">
                 <figure class="bl_header_imgWrapper">
                     <img src="/images/logo_oeText.svg" alt="오이로고 이미지">
                 </figure>
@@ -124,7 +124,7 @@
                     </nav>
                 </aside>
 
-                <article class="ly_contents">
+                <article class="ly_contents hp_mt60">
                     <!-- 타이틀 -->
                     <section class="el_mainTtl_wrapper">
                         <h1 class="el_mainTtl">신고</h1>
@@ -134,7 +134,6 @@
                         <ul class="bl_mainCat">
                             <!-- .on추가시 활성화 -->
                             <li class="bl_mainCat_list on">전체</li>
-                            <li class="bl_mainCat_list">사는 이야기</li>
                             <li class="bl_mainCat_list">모임</li>
                             <li class="bl_mainCat_list">댓글</li>
                         </ul>
@@ -171,13 +170,15 @@
                             <!-- .hover 추가시 호버 효과 / .delet 추가시 비활성화 -->
                             <tr class="bl_mainTable_row hover">
                                 <th class="bl_mainTable_cat hp_w170">신고일시</th>
+                                <th class="bl_mainTable_cat hp_w72">분류</th>
                                 <th class="bl_mainTable_cat hp_w72">상태</th>
                                 <th class="bl_mainTable_cat hp_w107">신고자</th>
-                                <th class="bl_mainTable_cat hp_w200">신고대상</th>
-                                <th class="bl_mainTable_cat hp_w200">신고내용</th>
+                                <th class="bl_mainTable_cat hp_w164">신고대상</th>
+                                <th class="bl_mainTable_cat hp_w164">신고내용</th>
                             </tr>
                             <tr class="bl_mainTable_row hover">
                                 <td class="bl_mainTable_col">2022-03-21 11:37:58</td>
+                                <td class="bl_mainTable_col ">모임</td>
                                 <td class="bl_mainTable_col hp_cGreen">완료</td>
                                 <td class="bl_mainTable_col">유노유노</td>
                                 <td class="bl_mainTable_col">유노윤호우 넌 너무 멋쪄 남자가 봐도 반하게써</td>
@@ -185,6 +186,7 @@
                             </tr>
                             <tr class="bl_mainTable_row hover">
                                 <td class="bl_mainTable_col">2022-03-21 11:37:58</td>
+                                <td class="bl_mainTable_col ">댓글</td>
                                 <td class="bl_mainTable_col hp_cRed">대기중</td>
                                 <td class="bl_mainTable_col">유노유노</td>
                                 <td class="bl_mainTable_col">유노윤호우 넌 너무 멋쪄 남자가 봐도 반하게써</td>
