--- a/jungmo/expand.html
+++ b/jungmo/expand.html
@@ -82,7 +82,7 @@
 <!-- --------------------------------------------------팝업 끝 ----------------------------------------------->
 
         <header class="hp_bgGreen">
-            <div class="ly_header bl_header">
+            <div class="ly_header bl_header hp_bgGreen">
                 <figure class="bl_header_imgWrapper">
                     <img src="/images/logo_oeText.svg" alt="오이로고 이미지">
                 </figure>
@@ -140,7 +140,7 @@
                     </nav>
                 </aside>
 
-                <article class="ly_contents">
+                <article class="ly_contents hp_mt60">
                     <section class="el_mainTtl_wrapper">
                         <h1 class="el_mainTtl">인원 확장 요청</h1>
                     </section>
