--- a/user/active_area.html
+++ b/user/active_area.html
@@ -17,7 +17,7 @@
 <!-- ------------------------------------------팝업 끝----------------------------------------------->
 
         <header class="hp_bgGreen">
-            <div class="ly_header bl_header">
+            <div class="ly_header bl_header hp_bgGreen">
                 <figure class="bl_header_imgWrapper">
                     <img src="/images/logo_oeText.svg" alt="오이로고 이미지">
                 </figure>
@@ -75,7 +75,7 @@
                     </nav>
                 </aside>
 
-                <article class="ly_contents">
+                <article class="ly_contents hp_mt60">
                     <!-- 타이틀 -->
                     <section class="el_mainTtl_wrapper hp_mb35">
                         <h1 class="el_mainTtl">가입자 수</h1>
