삭제된 모임 ui 수정

--- a/jungmo/index.html
+++ b/jungmo/index.html
@@ -344,7 +344,7 @@
                                 <td class="bl_mainTable_col">4.6</td>
                                 <td class="bl_mainTable_col">0건</td>
                                 <td class="bl_mainTable_col">
-                                    <button class="el_lineBtn">삭제됨</button>
+                                    <button class="el_lineBtn">복구</button>
                                 </td>
                             </tr>
                         </table>
